[package]
name = "minecraft-server-launcher"
version = "3.0.0"
authors = ["magical blob <cargo@flamino.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.4.5"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.59"